force-app/main/default/objects/Mensualite__c/fields/Cout_de_transport__c.field-meta.xml
<CustomField>
    <fullName>Cout_de_transport__c</fullName>
    <label>Coût de transport</label>
    <referenceTo>Cout_de_transport__c</referenceTo>
    <relationshipLabel>Mensualités</relationshipLabel>
    <relationshipName>mensualites</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>