force-app/main/default/objects/Mensualite__c/fields/Facture_recue__c.field-meta.xml
<CustomField>
    <fullName>Facture_recue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facture reçue</label>
    <type>Checkbox</type>
</CustomField>