force-app/main/default/objects/Mensualite__c/fields/Montant_facture_TTC__c.field-meta.xml
<CustomField>
    <fullName>Montant_facture_TTC__c</fullName>
    <label>Montant facturé TTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>