force-app/main/default/objects/Mensualite__c/listViews/Mes_mensualites.listView-meta.xml
<ListView>
    <fullName>Mes_mensualites</fullName>
    <columns>NAME</columns>
    <columns>Date_de_la_mensualite__c</columns>
    <columns>Montant_provisionne_TTC__c</columns>
    <columns>Cout_de_transport__c</columns>
    <columns>Statut__c</columns>
    <columns>Icone_Statut__c</columns>
    <filterScope>Mine</filterScope>
    <label>Mes mensualités</label>
</ListView>